Added workspace 8 config and updated waybar icons

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -50,6 +50,8 @@ $pycharm = pycharm
 ### AUTOSTART ###
 #################
 
+
+exec-once = [workspace 8 silent; monitor DP-2] $fileManager
 exec-once = [workspace 6 silent; monitor DP-1] $pycharm
 exec-once = [workspace 6 silent; monitor DP-2] $browser
 exec-once = [workspace 10 silent; monitor DP-2] $spotify
