Updated .config files

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -42,6 +42,7 @@ $spotify = spotify-launcher
 $whatsapp = elecwhat
 $discord = vesktop
 $pycharm = pycharm
+$flameshot = flameshot
 
 # Workspace names with zero width for sorting
 
@@ -57,6 +58,7 @@ exec-once = [workspace 6 silent; monitor DP-2] $browser
 exec-once = [workspace 10 silent; monitor DP-2] $spotify
 exec-once = [workspace 9 silent; monitor DP-2] $whatsapp
 exec-once = [workspace 9 silent; monitor DP-2] $discord 
+exec-once = [workspace 9 silent; monitor DP-2] $flameshot
 
 # exec-once = $terminal
 exec-once = mako
